fixed some spelliongs and added another project to the list

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       <section>
         <h2>📜 Manifesto</h2>
         <p>
-          My name is Helge, I am 21 years old and are born in Norway, currently
-          living in the beautiful smalltown Steinkjer. I have always been
+          My name is Helge, I am 21 years old and born in Norway, currently
+          living in a beautiful smalltown called Steinkjer. I have always been
           genuinely interested in computers and programming, which is why I
           decided to make it my career.
         </p>
@@ -48,10 +48,10 @@
 
           <p>
             <h2>Ezra</h2>
-            Ezra was my "exam" project for AW Academy, Ezra is a planning aplication for diffrent groups such as
+            Ezra was my "exam" project for AW Academy, Ezra is a planning/calender aplication for diffrent groups such as
             football teams, or music clubs.
             <br>
-            Ezra was made in 2 weeks, and uses technologies such as mySql,JavaScript, Java, Thymeleaf, smp and Sprinbg
+            Ezra was made in 2 weeks, and uses technologies such as mySql,JavaScript, Java, Thymeleaf, mvc and Spring
             Boot
             <br>
             <br>
@@ -68,6 +68,19 @@
             <br>
             <br>
             <a href="https://github.com/Rannem/Elua">Elua github</a>
+            <br>
+        </div>
+        </p>
+
+        <p>
+          <div>
+            <h2>Discord bot</h2>
+            The discordbot is a project that I work on when my friends needs a function in the friends discord. The bot currently has fetures as play music, check ping to discservers and
+            split active voicechannel members into x amount of teams for diffrent games.
+            <br>
+            <br>
+            <br>
+            <a href="https://github.com/Rannem/MusicBot">Discordbot github</a>
             <br>
         </div>
         </p>
