--- a/index.html
+++ b/index.html
@@ -2,12 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/assets/favicon.17e50649.svg" />
+    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Helge Rannem</title>
-    <script type="module" crossorigin src="/assets/index.6259cf43.js"></script>
-    <link rel="modulepreload" href="/assets/vendor.51b091ee.js">
-    <link rel="stylesheet" href="/assets/index.256b36d3.css">
   </head>
   <body>
     <canvas id="bg"></canvas>
@@ -25,8 +22,8 @@
       <section>
         <h2>📜 Manifesto</h2>
         <p>
-          My name is Helge, I am 21 years old and are born in Norway, currently
-          living in the beautiful smalltown Steinkjer. I have always been
+          My name is Helge, I am 21 years old and born in Norway, currently
+          living in a beautiful smalltown called Steinkjer. I have always been
           genuinely interested in computers and programming, which is why I
           decided to make it my career.
         </p>
@@ -51,10 +48,10 @@
 
           <p>
             <h2>Ezra</h2>
-            Ezra was my "exam" project for AW Academy, Ezra is a planning aplication for diffrent groups such as
+            Ezra was my "exam" project for AW Academy, Ezra is a planning/calender aplication for diffrent groups such as
             football teams, or music clubs.
             <br>
-            Ezra was made in 2 weeks, and uses technologies such as mySql,JavaScript, Java, Thymeleaf, smp and Sprinbg
+            Ezra was made in 2 weeks, and uses technologies such as mySql,JavaScript, Java, Thymeleaf, mvc and Spring
             Boot
             <br>
             <br>
@@ -71,6 +68,19 @@
             <br>
             <br>
             <a href="https://github.com/Rannem/Elua">Elua github</a>
+            <br>
+        </div>
+        </p>
+
+        <p>
+          <div>
+            <h2>Discord bot</h2>
+            The discordbot is a project that I work on when my friends needs a function in the friends discord. The bot currently has fetures as play music, check ping to discservers and
+            split active voicechannel members into x amount of teams for diffrent games.
+            <br>
+            <br>
+            <br>
+            <a href="https://github.com/Rannem/MusicBot">Discordbot github</a>
             <br>
         </div>
         </p>
@@ -114,6 +124,6 @@
       </blockquote>
     </main>
 
-    
+    <script type="module" src="/main.js"></script>
   </body>
 </html>
