--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/assets/favicon.17e50649.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Helge Rannem</title>
+    <script type="module" crossorigin src="/assets/index.6259cf43.js"></script>
+    <link rel="modulepreload" href="/assets/vendor.51b091ee.js">
+    <link rel="stylesheet" href="/assets/index.256b36d3.css">
   </head>
   <body>
     <canvas id="bg"></canvas>
@@ -124,6 +127,6 @@
       </blockquote>
     </main>
 
-    <script type="module" src="/main.js"></script>
+    
   </body>
 </html>
