fixed some spellings and removed annoying sunrings

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 
           <p>
             <h2>Ezra</h2>
-            Ezra was my "exam" project for AW Academy, Ezra is a planning/calender aplication for diffrent groups such as
-            football teams, or music clubs.
+            Ezra was my "exam" project for AW Academy, Ezra is a planning/calender application for different groups such as
+            football teams or music clubs.
             <br>
             Ezra was made in 2 weeks, and uses technologies such as mySql,JavaScript, Java, Thymeleaf, mvc and Spring
             Boot
