--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/assets/favicon.17e50649.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Helge Rannem</title>
-    <script type="module" crossorigin src="/assets/index.6259cf43.js"></script>
-    <link rel="modulepreload" href="/assets/vendor.51b091ee.js">
+    <script type="module" crossorigin src="/assets/index.2216500c.js"></script>
+    <link rel="modulepreload" href="/assets/vendor.159abb3e.js">
     <link rel="stylesheet" href="/assets/index.256b36d3.css">
   </head>
   <body>
@@ -51,8 +51,8 @@
 
           <p>
             <h2>Ezra</h2>
-            Ezra was my "exam" project for AW Academy, Ezra is a planning/calender aplication for diffrent groups such as
-            football teams, or music clubs.
+            Ezra was my "exam" project for AW Academy, Ezra is a planning/calender application for different groups such as
+            football teams or music clubs.
             <br>
             Ezra was made in 2 weeks, and uses technologies such as mySql,JavaScript, Java, Thymeleaf, mvc and Spring
             Boot
