--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
         <p>
           <div>
             <h2>Discord bot</h2>
-            The discordbot is a project that I work on when my friends needs a function in the friends discord. The bot currently has fetures as play music, check ping to discservers and
-            split active voicechannel members into x amount of teams for diffrent games.
+            The discordbot is a project that I work on when my friends needs a function in the friends discord. The bot currently has features as play music, check ping to the discord server and
+            split active voicechannel members into x amount of teams for different games.
             <br>
             <br>
             <br>
